--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Diego Felipe Florença</a>.
+      >. Coded by
+      <a href="https://diegoflorenca.github.io/FM-3-column-card/"
+        >Diego Felipe Florença</a
+      >.
     </div>
   </body>
 </html>
